--- a/CKD.Web/Views/Shared/_Layout.cshtml
+++ b/CKD.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>                        
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Product</a>
+                        </li>
                     </ul>
                 </div>
             </div>
