--- a/CKD.Web/Views/Product/Create.cshtml
+++ b/CKD.Web/Views/Product/Create.cshtml
@@ -69,10 +69,16 @@
         <div class="row my-4">
             <div class="col-2"></div>
             <div class="col-3">
-                <a asp-controller="Product" asp-action="Index" class="btn btn-outline-secondary form-control">Back</a>
+                <a asp-controller="Product" asp-action="Index" class="btn btn-outline-secondary form-control">
+                    <i class="bi bi-backspace"></i>
+                    Back
+                    </a>
             </div>
             <div class="col-3">
-                <button asp-controller="Product" asp-action="Create" type="submit" class="btn btn-outline-primary form-control">Create</button>
+                <button asp-controller="Product" asp-action="Create" type="submit" class="btn btn-outline-primary form-control">
+                    <i class="bi bi-plus-circle"></i>
+                    Create
+                    </button>
             </div>
         </div>
     </form>
