--- a/CKD.Web/Views/Product/Index.cshtml
+++ b/CKD.Web/Views/Product/Index.cshtml
@@ -15,13 +15,16 @@
         <h4>@TempData["Message"]</h4>
     </div>
     <div class="col-2">
-        <a asp-controller="Product" asp-action="Create" class="btn btn-outline-primary">Create New Product</a>
+        <a asp-controller="Product" asp-action="Create" class="btn btn-outline-primary">
+            <i class="bi bi-plus-circle"></i>
+            Create New Product
+        </a>
     </div>
 </div>
 <br />
 <table class="table table-striped border">
     <thead>
-        <tr>
+        <tr class="text-center">
             <th>#</th>
             <th>
                 @Html.DisplayNameFor(model => model.Id)
@@ -35,27 +38,32 @@
             <th>
                 @Html.DisplayNameFor(model => model.Notes)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.EngineType)
+            </th>
+            <th>Operation</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="text-center">
                 <th>@i</th>
                 <td>@item.Id</td>
                 <td>@item.Version</td>
                 <td>@item.Name</td>
                 <td>@item.Notes</td>
+                <td>@item.EngineType</td>
                 <td>
-                    <a asp-controller="Product" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary">
+                    <a asp-controller="Product" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-success">
                         <i class="bi bi-pencil-square"></i>
                     </a>
                     <a asp-controller="Product" asp-action="" asp-route-id="@item.Id" class="btn btn-outline-danger disabled">
                         <i class="bi bi-trash3"></i>
                     </a>
-                    <a asp-controller="Product" asp-action="AddProductParts" asp-route-id="@item.Id" class="btn btn-outline-danger">
+                    <a asp-controller="ProductPart" asp-action="AddProductPart" asp-route-id="@item.Id" class="btn btn-outline-primary">
                         <i class="bi bi-plus-lg"></i>
+                        Part
                     </a>
                 </td>
             </tr>
