--- a/CKD.Web/Views/Shared/_Layout.cshtml
+++ b/CKD.Web/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Part" asp-action="Index">Part</a>
+                        </li>
                     </ul>
                 </div>
             </div>
