Add Get and Post methods for Edit in the Part controller.

--- a/CKD.Web/Views/Part/Index.cshtml
+++ b/CKD.Web/Views/Part/Index.cshtml
@@ -23,7 +23,7 @@
 </div>
 
 <table class="table table-striped border">
-    <thead>
+    <thead class="table-dark">
         <tr class="text-center">
             <th>#</th>
             <th>
