--- a/CKD.Web/Views/Product/Index.cshtml
+++ b/CKD.Web/Views/Product/Index.cshtml
@@ -21,9 +21,9 @@
         </a>
     </div>
 </div>
-<br />
+
 <table class="table table-striped border">
-    <thead>
+    <thead class="table-dark">
         <tr class="text-center">
             <th>#</th>
             <th>
