--- a/CKD.Web/Views/Part/Delete.cshtml
+++ b/CKD.Web/Views/Part/Delete.cshtml
@@ -11,7 +11,7 @@
             <h1 class="">Delete this Part</h1>
         </div>
         <div class="col-6 text-info">
-            <h4>@TempData["Message"]</h4>
+            <h4>@TempData["message"]</h4>
         </div>
         <div class="col-2">
         </div>
