--- a/CKD.Web/Views/Part/Create.cshtml
+++ b/CKD.Web/Views/Part/Create.cshtml
@@ -7,10 +7,10 @@
 <div class="container-fluid border shadow">
     <div class="row">
         <div class="col-4">
-            <h2 class="">Create new Part</h2>
+            <h2 class="">Create new Part and Set</h2>
         </div>
         <div class="col-6 text-info">
-            <h4>@TempData["Message"]</h4>
+            <h4>@TempData["message"]</h4>
         </div>
         <div class="col-2">
         </div>
@@ -85,9 +85,3 @@
     </form>
 </div>
 
-
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
