--- a/CKD.Web/Views/Shared/_Layout.cshtml
+++ b/CKD.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Part" asp-action="Index">Part</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Part" asp-action="Index">Part/Set</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                     </ul>
                 </div>
