Changing the style of the Product Create and Edit View

--- a/CKD.Web/Views/Part/Edit.cshtml
+++ b/CKD.Web/Views/Part/Edit.cshtml
@@ -88,3 +88,9 @@
         </div>
     </form>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
