--- a/CKD.Web/Views/Home/About.cshtml
+++ b/CKD.Web/Views/Home/About.cshtml
@@ -2,8 +2,9 @@
 
 <div>
     <h3></h3>
-    <p><strong>Name of Project:</strong> CKD</p>
-    <p><strong>Project file:</strong> CKD.sln</p>
+    <p><strong>Sloution name:</strong> CKD</p>
+    <p><strong>Sloution file name:</strong> CKD.sln</p>
+    <p><strong>Title:</strong> CKD.Web04</p>
     <p><strong>Type of Project:</strong> Web Application</p>
     <p><strong>Create Date:</strong> Apr 23, 2025</p>
     <p><strong>Framework:</strong> ASP.NET Core</p>
@@ -16,7 +17,7 @@
     <p><strong>ORM:</strong> Entity Framework Core</p>
     <p><strong>Database create technique:</strong> Code First</p>
     <p><strong>Database name:</strong> DB_CKD04</p>
-    <p><strong>Description:</strong> This project is a fork of the main project for GitHub with manually data.</p>
+    <p><strong>Description:</strong> This project is a fork of the main project for GitHub with manually and experimental data.</p>
 </div>
 
 <a asp-controller="Home" asp-action="Index" class="">Back to Home</a>
