--- a/CKD.Web/Views/Product/Edit.cshtml
+++ b/CKD.Web/Views/Product/Edit.cshtml
@@ -18,79 +18,80 @@
     <div class="row ">
         <div class="col-8">
             <form method="post" enctype="multipart/form-data">
-                <div class="row form-group my-4">
-                    <div class="col-3">
-                        <label asp-for="Id" class=""></label>
+                <div class="row my-3">
+                    <div class="col-2">
                     </div>
-                    <div class="col-7 ">
-                        <input asp-for="Id" readonly class="form-control" />
+                    <div class="col-8 form-floating">
+                        <input asp-for="Id" readonly class="form-control px-3" />
+                        <label asp-for="Id" class="mx-3"></label>
                         <span asp-validation-for="Id" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="row form-group my-4">
-                    <div class="col-3">
-                        <label asp-for="Version" class=""></label>
+
+                <div class="row my-3">
+                    <div class="col-2">
                     </div>
-                    <div class="col-7 ">
-                        <input asp-for="Version" readonly class="form-control" />
+                    <div class="col-8 form-floating">
+                        <input asp-for="Version" readonly class="form-control px-3" aria-required="" placeholder="" />
+                        <label asp-for="Version" class="mx-3"></label>
                         <span asp-validation-for="Version" class="text-danger"></span>
                     </div>
                 </div>
 
-                <div class="row form-group my-4">
-                    <div class="col-3">
-                        <label asp-for="Name"></label>
+                <div class="row my-3">
+                    <div class="col-2">
                     </div>
-                    <div class="col-7 ">
-                        <input asp-for="Name" class="form-control" />
+                    <div class="col-8 form-floating">
+                        <input asp-for="Name" class="form-control px-3" aria-required="" placeholder="" />
+                        <label asp-for="Name" class="mx-3"></label>
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                 </div>
 
-                <div class="row form-group my-4">
-                    <div class="col-3">
-                        <label asp-for="Notes"></label>
+                <div class="row my-3">
+                    <div class="col-2">
                     </div>
-                    <div class="col-7 ">
-                        <input asp-for="Notes" class="form-control" />
+                    <div class="col-8 form-floating">
+                        <input asp-for="Notes" class="form-control px-3" aria-required="" placeholder="" />
+                        <label asp-for="Notes" class="mx-3"></label>
                         <span asp-validation-for="Notes" class="text-danger"></span>
                     </div>
                 </div>
 
-                <div class="row form-group my-4">
-                    <div class="col-3">
-                        <label asp-for="EngineType" class=""></label>
+                <div class="row form-group my-3">
+                    <div class="col-2">
                     </div>
-                    <div class="col-7 ">
-                        <input asp-for="EngineType" class="form-control" />
+                    <div class="col-8 form-floating">
+                        <input asp-for="EngineType" class="form-control px-3" />
+                        <label asp-for="EngineType" class="mx-3"></label>
                         <span asp-validation-for="EngineType" class="text-danger"></span>
                     </div>
                 </div>
 
-                <div class="row form-group my-4">
-                    <div class="col-3">
-                        <label asp-for="Usage" class=""></label>
+                <div class="row my-3">
+                    <div class="col-2">
                     </div>
-                    <div class="col-7">
-                        <input asp-for="Usage" class="form-control" />
+                    <div class="col-8 form-floating">
+                        <input asp-for="Usage" class="form-control px-3" aria-required="" placeholder="" />
+                        <label asp-for="Usage" class="mx-3"></label>
                         <span asp-validation-for="Usage" class="text-danger"></span>
                     </div>
                 </div>
 
-                <div class="row form-group my-4">
-                    <div class="col-3">
-                        <label asp-for="@Model.NewImage"></label>
+                <div class="row my-3">
+                    <div class="col-2">
+                        @* <label asp-for="@Model.NewImage"></label> *@
                     </div>
-                    <div class="col-7">
-                        <input asp-for="@Model.OldImage"  hidden  class="form-control" />
+                    <div class="col-8">
+                        <input asp-for="@Model.OldImage" hidden class="form-control" />
                         <input asp-for="@Model.NewImage" type="file" name="fileUpload" id="fileUpload" class="form-control" />
                         <span asp-validation-for="@Model.NewImage" class="text-danger"></span>
                     </div>
                 </div>
 
-                <div class="row my-4">
-                    <div class="col-3"></div>
-                    <div class="col-3">
+                <div class="row my-3">
+                    <div class="col-2"></div>
+                    <div class="col-4">
                         <a asp-controller="Product" asp-action="Index" class="btn btn-outline-secondary form-control">
                             <i class="bi bi-backspace"></i>
                             Back
@@ -106,7 +107,7 @@
             </form>
         </div>
         <div class="col-4">
-            <img src="@Model.OldImage" style="width:250px;height:350px;" />
+            <img src="@Model.OldImage" class="img-thumbnail my-3" style="width:250px;height:350px;" />
         </div>
     </div>
 </div>
