--- a/CKD.Web/Views/Part/Index.cshtml
+++ b/CKD.Web/Views/Part/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@using CKD.Web.ViewModels
 @model IEnumerable<PartViewModel>
-
 @{
     ViewData["Title"] = "Index";
     int i = 0;
@@ -9,7 +8,7 @@
 
 <div class="row">
     <div class="col-4">
-        <h1 class="">All available Parts</h1>
+        <h1 class="my-1 mx-2">All available Parts</h1>
     </div>
     <div class="col-6 text-info">
         <h4>@TempData["message"]</h4>
