--- a/CKD.Web/Views/Product/Create.cshtml
+++ b/CKD.Web/Views/Product/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model CKD.Web.ViewModels.ProductViewModel
+﻿@using CKD.Web.ViewModels
+@model ProductViewModel
 @{
     ViewData["Title"] = "Create";
 }
@@ -6,7 +7,7 @@
 <div class="container-fluid border shadow">
     <div class="row">
         <div class="col-4">
-            <h3 class="my-2 mx-4">Create new Product</h3>
+            <h2 class="my-2 mx-2">Create new Product</h2>
         </div>
         <div class="col-6 text-info my-2">
             <h4>@TempData["message"]</h4>
