--- a/CKD.Web/Views/Part/Delete.cshtml
+++ b/CKD.Web/Views/Part/Delete.cshtml
@@ -1,5 +1,5 @@
-﻿@model CKD.Web.ViewModels.PartViewModel
-
+﻿@using CKD.Web.ViewModels
+@model PartViewModel
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -8,7 +8,7 @@
 <div class="container border shadow">
     <div class="row">
         <div class="col-4">
-            <h1 class="">Delete this Part</h1>
+            <h2 class="my-2 mx-2">Delete this Part</h2>
         </div>
         <div class="col-6 text-info">
             <h4>@TempData["message"]</h4>
@@ -19,61 +19,62 @@
 
     <hr />
 
-    <div class="row form-group my-4">
-        <div class="col-2">
-            <label asp-for="Id" class=""></label>
+    <div class="row my-3">
+        <div class="col-1">
         </div>
-        <div class="col-6 ">
-            <input asp-for="Id" readonly class="form-control" />
+        <div class="col-6 form-floating">
+            <input asp-for="Id" readonly class="form-control px-3" />
+            <label asp-for="Id" class="mx-3"></label>
             <span asp-validation-for="Id" class="text-danger"></span>
         </div>
     </div>
-    <div class="row form-group my-4">
-        <div class="col-2">
-            <label asp-for="Version" class=""></label>
+
+    <div class="row my-3">
+        <div class="col-1">
         </div>
-        <div class="col-6 ">
-            <input asp-for="Version" readonly class="form-control" />
+        <div class="col-6 form-floating">
+            <input asp-for="Version" readonly class="form-control px-3" />
+            <label asp-for="Version" class="mx-3"></label>
             <span asp-validation-for="Version" class="text-danger"></span>
         </div>
     </div>
 
-    <div class="row form-group my-4">
-        <div class="col-2">
-            <label asp-for="FarsiName"></label>
+    <div class="row my-3">
+        <div class="col-1">
         </div>
-        <div class="col-6 ">
-            <input asp-for="FarsiName" readonly class="form-control" />
+        <div class="col-6 form-floating">
+            <input asp-for="FarsiName" readonly class="form-control px-3" />
+            <label asp-for="FarsiName" class="mx-3"></label>
             <span asp-validation-for="FarsiName" class="text-danger"></span>
         </div>
     </div>
 
-    <div class="row form-group my-4">
-        <div class="col-2">
-            <label asp-for="EnglishName" class=""></label>
+    <div class="row my-3">
+        <div class="col-1">
         </div>
-        <div class="col-6 ">
-            <input asp-for="EnglishName" readonly class="form-control disabled" />
+        <div class="col-6 form-floating">
+            <input asp-for="EnglishName" readonly class="form-control px-3" />
+            <label asp-for="EnglishName" class="mx-3"></label>
             <span asp-validation-for="EnglishName" class="text-danger"></span>
         </div>
     </div>
 
-    <div class="row form-group my-4">
-        <div class="col-2">
-            <label asp-for="IsSet"></label>
+    <div class="row my-3">
+        <div class="col-1">
+            @* <label asp-for="IsSet"></label> *@
         </div>
-        <div class="col-6 form-group form-check">
+        <div class="col-6 form-check">
             <input asp-for="IsSet" hidden value="false" id="flexCheckDefault" />
-            <input asp-for="IsSet" type="checkbox" readonly class="form-check-input disabled" value="true" id="flexCheckDefault" />
-            <label asp-for="IsSet" class="form-check-label">Part is Set?</label>
+            <input asp-for="IsSet" type="checkbox" readonly class="form-check-input mx-1 disabled" value="true" id="flexCheckDefault" />
+            <label asp-for="IsSet" class="form-check-label mx-3">Part is Set?</label>
             <span asp-validation-for="IsSet" class="text-danger"></span>
         </div>
     </div>
 
     <form asp-action="Delete">
-        <div class="row my-4">
+        <div class="row my-3">
             <input type="hidden" asp-for="Id" />
-            <div class="col-2"></div>
+            <div class="col-1"></div>
             <div class="col-3">
                 <a asp-controller="Part" asp-action="Index" class="btn btn-outline-secondary form-control">
                     <i class="bi bi-backspace"></i>
