--- a/CKD.Web/Views/Product/Index.cshtml
+++ b/CKD.Web/Views/Product/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<CKD.Web.ViewModels.ProductViewModel>
+﻿@using CKD.Web.ViewModels
+@model IEnumerable<ProductViewModel>
 @{
     ViewData["Title"] = "Index";
     int i = 0;
@@ -7,7 +8,7 @@
 
 <div class="row">
     <div class="col-4">
-        <h1 class="">Product List</h1>
+        <h1 class="my-1 mx-2">Product List</h1>
     </div>
     <div class="col-6 text-info">
         <h4>@TempData["message"]</h4>
