Add the Engine Type table to the database to separate it from the Product table.

--- a/CKD.Web/Views/Shared/_Layout.cshtml
+++ b/CKD.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Part" asp-action="Index">Part/Set</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EngineType" asp-action="Index">Engine Type</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                     </ul>
